Fix alignment and spacing between elements.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ header {
     position: fixed;
 }
 
+#logo img {
+    padding-top: 15px;
+}
+
 nav li { 
     list-style-type: none;
     line-height: 2em;
@@ -33,21 +37,23 @@ nav a:hover {
 #about-me-section {
     width: 70%;
     margin-left: 300px;
+    max-width: 1040px;
 }
 
 #about-me-left {
     float: left;
     width: 50%;
+    max-width: 505px;
 }
 
 #hero-photo {
-    max-height: 90%;
-    max-width: 90%;
+    max-width: 100%;
 }
 
 #about-me-right {
     float: right;
     width: 50%;
+    max-width: 505px;
 }
 
 #about-me-right h1 {
@@ -75,9 +81,13 @@ nav a:hover {
         position: inherit;
     }
 
-    header #logo {
+    #logo {
         width: 220px;
         float: left;
+    }
+
+    #logo img {
+        padding-top: 0;
     }
 
     header nav {
@@ -90,19 +100,25 @@ nav a:hover {
     }
 
     #about-me-section { 
-        margin: 20px;
+        margin: 0;
         width: inherit;
     }
 }
 
 @media screen and (max-width: 720px) {
+    #logo {
+        width: 180px;
+    }
+
     #about-me-left {
         float: inherit;
         width: inherit;
+        max-width: unset;
     }
 
     #about-me-right {
         float: inherit;
         width: inherit;
+        max-width: unset;
     }
 }
